v3.9.2
- Importing and renaming a preset now requires one less button press
- Fixed an issue where Tormented enemies (SL Season 2 Affix) could be visible in the pull list and pull outlines
- Affix update
- Starseers in Tazavesh: Gambit in front of So'leah have been unlinked from each other
- Health values for Season 3 for all Shadowlands dungeons have been updated
    - spires
    - plaguefall
- Dungeon updates by Blizzard that include count changes will from now on be updated via an automated script. Thanks once again to Stinth!
- Count updates:
  - Black Rook Hold
      Wyrmtongue Trickster with id 98900 has been updated: 4 -> 3
      Wyrmtongue Scavenger with id 98792 has been updated: 4 -> 3
      Total dungeon count has been updated: 300 -> 312
  - Court of Stars
      Duskwatch Sentry with id 104251 has been updated: 4 -> 3
      Felbound Enforcer with id 104278 has been updated: 10 -> 12
  - Darkheart Thicket
      Vilethorn Blossom with id 99360 has been updated: 9 -> 4
      Total dungeon count has been updated: 280 -> 273
  - Eye of Azshara
      Hatecoil Warrior with id 111637 has been updated: 4 -> 0
  - Neltharion's Lair
      Mightstone Breaker with id 90997 has been updated: 4 -> 5
      Rockback Gnasher with id 91006 has been updated: 4 -> 3
      Rockback Gnasher with id 91006 has been updated: 4 -> 3
  - Return to Karazhan Lower
      Coldmist Widow with id 115019 has been updated: 8 -> 4
      Arcanid with id 115020 has been updated: 8 -> 4
  - Return to Karazhan Upper
      Abstract Nullifier with id 115765 has been updated: 16 -> 12
  - Atal'Dazar
      Enchanted Emissary with id 155432 has been updated: 0 -> 4
  - Freehold
      Enchanted Emissary with id 155432 has been updated: 0 -> 4
  - Kings' Rest
      Shadow of Zul with id 138489 has been updated: 8 -> 0
      Enchanted Emissary with id 155432 has been updated: 0 -> 4
  - Shrine of the Storm
      Enchanted Emissary with id 155432 has been updated: 0 -> 9
  - Siege of Boralus