@@ -510,6 +510,7 @@ function MDT:DisplayBlipTooltip(blip, shown)
     local text = L[data.name].." "..occurence..group.."\n"..string.format(L["Level %d %s"],data.level,L[data.creatureType]).."\n".. string.format(L["%s HP"],MDT:FormatEnemyHealth(health)).."\n"
     local count = MDT:IsCurrentPresetTeeming() and data.teemingCount or data.count
     text = text ..L["Forces"]..": ".. MDT:FormatEnemyForces(count)
+    text = text .."\n"..L["Efficiency Score"]..": "..MDT:GetEfficiencyScoreString(count,data.health)
     local reapingText
     if blip.data.reaping and db.MDI.enabled and preset.mdi.beguiling == 13 then
         local reapingIcon = CreateTextureMarkup(MDT.reapingStatic[tostring(blip.data.reaping)].iconTexture, 32, 32, 16, 16, 0, 1, 0, 1,0,0) or ""
@@ -580,6 +581,14 @@ function MDT:DisplayBlipTooltip(blip, shown)
 
 end
 
+function MDT:GetEfficiencyScoreString(count,health)
+    local totalCount = MDT.dungeonTotalCount[db.currentDungeonIdx].normal
+    local score = 2.5*(count/totalCount)*300/(health/100000)
+    local formattedScore = MDT:Round(score,1)
+    local value = score/10
+    local colorHex = MDT:RGBToHex(math.max(0,math.min(1,2*(1-value))), math.min(1,2*value), 0)
+    return ("|cFF%s%s|r"):format(colorHex, formattedScore)
+end
 
 
 function MDT:GetCurrentDevmodeBlip()
